@@ -81,6 +81,11 @@ static GSM_Error AT_StateMachine(GSM_StateMachine *s, unsigned char rx_char)
 
 		{"+MBAN:"	,1},	/* Motorola banner */
 
+		/* Huawei */
+		{"^RSSI:"	,1}, /* ^RSSI:18 */
+		{"^DSFLOWRPT:"	,1}, /* ^DSFLOWRPT:00000124,00000082,00000EA6,0000000000012325,000000000022771D,0000BB80,0001F400 */
+		{"^BOOT:"	,1}, /* ^BOOT:27710117,0,0,0,75 */
+
 		{NULL		,1}};
 
     	/* Ignore leading CR, LF and ESC */
